# fwupd-efirs

./: .gitignore  Cargo.toml  Makefile  README.md  fwupd-6e58e73d-8061-44e4-8949-33b7f0d5c726-0-0abba7dc-e516-4167-bbf5-4d9d1c739416  rust-toolchain.toml
src/: main.rs
