[package]
name = "fwupd-efirs"
version = "0.1.0"
edition = "2021"

[dependencies]
#bincode = "1.3.3"
log = "0.4"
#serde = { version = "1.0.152", features = ["alloc", "derive"] }
#             - alloc
#             - derive
#             - rc
#             - serde_derive
#             - unstable

#uefi = "0.19.1"
uefi = { version = "0.19.1", features = ["alloc"] }
uefi-services = "0.16"

[patch.crates-io]
uefi = { git = "https://github.com/rust-osdev/uefi-rs.git", branch = "main" }
uefi-services = { git = "https://github.com/rust-osdev/uefi-rs.git", branch = "main" }
